# MiniRust

./: .gitignore  .ocamlformat  Makefile  README.md  dune-project  return  test.sh
src/: anot.ml  ast.ml  dune  lexer.mll  parser.mly  semantic.ml  type.ml
x86_64/: dune  x86_64.ml  x86_64.mli
