(library
 (public_name minirust)
 (name minirust)
 (modules ast lexer parser type codegen)
 (libraries x86_64)
 (preprocess (pps ppx_deriving.show)))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action (run ocamllex %{deps})))

(rule
 (targets parser.ml parser.mli)
 (deps parser.mly)
 (action (run menhir --explain %{deps} --infer)))